--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "devDependencies": {
     "@types/node": "^14.14.41",
     "@types/react": "^17.0.4",
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.13",
     "react": "^17.0.2",
+    "tailwindcss": "^2.1.2",
     "typescript": "^4.2.4"
   }
 }
