--- a/package.json
+++ b/package.json
@@ -1,8 +1,24 @@
 {
+  "name": "nextjs-docker",
+  "license": "UNLICENSED",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint --fix . --ext .js,.jsx,.ts,.tsx",
+    "format": "prettier --write ."
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   },
   "dependencies": {
     "next": "^10.1.3",
@@ -11,8 +27,17 @@
   "devDependencies": {
     "@types/node": "^14.14.41",
     "@types/react": "^17.0.4",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "autoprefixer": "^10.2.5",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
+    "husky": "4",
+    "lint-staged": "^10.5.4",
     "postcss": "^8.2.13",
+    "prettier": "^2.2.1",
     "react": "^17.0.2",
     "tailwindcss": "^2.1.2",
     "typescript": "^4.2.4"
