--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,27 @@
+#version: '3'
+#services:
+#  app:
+#    image: node:14-alpine
+#    command: yarn dev
+#    working_dir: /app
+#    volumes:
+#      - .:/app:cached
+#      - node_modules:/app/node_modules
+#    ports:
+#      - 3000:3000
+#volumes:
+#  node_modules:
+
 version: '3'
 services:
   app:
-    image: node:14-alpine
-    command: yarn dev
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: "yarn dev"
     working_dir: /app
-    volumes:
-      - .:/app:cached
-      - node_modules:/app/node_modules
     ports:
       - 3000:3000
-volumes:
-  node_modules:
+    volumes:
+      - /app/node_modules
+      - .:/app
